--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.5.0",
+    "babel-preset-env": "^1.7.0",
+    "bcrypt": "^3.0.6",
     "glob": "^7.1.4",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
@@ -51,7 +53,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "chai": "^4.2.0",
-    "eslint": "^6.0.1",
+    "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.0",
