--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "koa-jwt": "^3.6.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.6.4"
+    "mongoose": "^5.6.4",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
