--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "koa-jwt": "^3.6.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
     "mongoose": "^5.6.4",
     "validator": "^11.1.0"
   },
