--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "koa-router": "^7.4.0",
     "koa2-cors": "^2.0.6",
     "mongoose": "^5.6.4",
+    "mongoose-double": "^0.0.1",
     "validator": "^11.1.0"
   },
   "devDependencies": {
